@@ -4,8 +4,9 @@
  * GEOS - Geometry Engine Open Source
  * http://geos.refractions.net
  *
- * Copyright (C) 2009  Sandro Santilli <strk@keybit.net>
- * Copyright (C) 2006 Refractions Research Inc.
+ * Copyright (C) 2009 2011 Sandro Santilli <strk@keybit.net>
+ * Copyright (C) 2005-2006 Refractions Research Inc.
+ * Copyright (C) 2001-2002 Vivid Solutions Inc.
  *
  * This is free software; you can redistribute and/or modify it under
  * the terms of the GNU Lesser General Public Licence as published
@@ -14,7 +15,7 @@
  *
  **********************************************************************
  *
- * Last port: geom/LineSegment.java rev. 1.30 (JTS-1.9)
+ * Last port: geom/LineSegment.java r18 (JTS-1.11)
  *
  **********************************************************************/
 
@@ -211,6 +212,8 @@ public:
 	 *         (positive is to the left, negative is to the right)
 	 *
 	 * @param ret will be set to the point at that distance and offset
+	 * 
+	 * @throws IllegalStateException if the segment has zero length
 	 */
 	void pointAlongOffset(double segmentLengthFraction,
 	                      double offsetDistance,
